# ledger-app-cardano-shelley

./: .astylerc  .gitignore  .mdl.rb  .mdlrc  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  all.patch  byron.patch  catalyst.patch  ledger_app.toml  multisigAndMinting.patch  nativeScript.patch  opcert.patch  poolSupport.patch
.clusterfuzzlite/: Dockerfile  build.sh
.github/workflows/: build_and_functional_tests.yml  cflite_cron.yml  cflite_pr.yml  ci.yml  misspellings_checks.yml  python_client_checks.yml  swap-ci-workflow.yml
doc/: build.md  design_doc.md  features.md  ins_derive_address.md  ins_derive_native_script_hash.md  ins_get_app_version.md  ins_get_cold_key.md  ins_get_extended_public_key.md  ins_get_public_keys.md  ins_get_serial_number.md  ins_sign_catalyst_registration.md  ins_sign_cip36_registration.md  ins_sign_governance_voting_registration.md  ins_sign_opcert.md  ins_sign_stake_pool_registration.md  ins_sign_tx.md
fuzz/: CMakeLists.txt  coverage.py  fuzztest.c  glyphs.c  glyphs.h  os_mocks.c  readme.md
fuzz/ref_corpus/: signTxOrdinaryMary0  signTxOrdinaryMary1  signTxOrdinaryMary2  signTxOrdinaryMary3  signTxOrdinaryMary4  signTxOrdinaryMary5  signTxOrdinaryMary6  signTxPoolRegistrationOKOperator1  signTxPoolRegistrationOKOperator2  signTxPoolRegistrationOKOwner5  signTxPoolRegistrationOKOwner6  valid_tx
fuzzing/: CMakeLists.txt  README.md
fuzzing/corpus/: signOperationalCertificate  signTxPoolRegistrationOKOperator0  signTxPoolRegistrationOKOwner0  signTxPoolRegistrationOKOwner2  signTxPoolRegistrationOKOwner3  signTxPoolRegistrationOKOwner4  signTxPoolRegistrationOKOwner7  signTxPoolRegistrationOKOwner8  signtx
fuzzing/include/: glyphs.h
fuzzing/src/: all_harness.c  crc32.c  deriveAddress_harness.c  deriveNativeScriptHash_harness.c  getPublicKeys_harness.c  glyphs.c  os_mocks.c  signCVote_harness.c  signMsg_harness.c  signOpCert_harness.c  signTx_harness.c  ui_mocks.c
src/: addressUtilsByron.c  addressUtilsByron.h  addressUtilsByron_test.c  addressUtilsShelley.c  addressUtilsShelley.h  addressUtilsShelley_test.c  app_main.c  app_mode.c  app_mode.h  assert.c  assert.h  auxData.h  auxDataHashBuilder.c  auxDataHashBuilder.h  auxDataHashBuilder_test.c  base58.c  base58.h  base58_test.c  bech32.c  bech32.h  bech32_test.c  bip44.c  bip44.h  bip44_test.c  bufView.h  cardano.c  cardano.h  cardanoCertificates.h  cardanoOutputs.h  cardano_io.c  cardano_io.h  cbor.c  cbor.h  cbor_test.c  common.h  crc32.c  crc32.h  crc32_test.c  crypto.c  crypto.h  (+129 more)
src/addressUtils/: addressUtilsByron.c  addressUtilsByron.h  addressUtilsShelley.c  addressUtilsShelley.h
src/auxDataHashBuilder/: auxDataHashBuilder.h
src/crypto/: bech32.h  bip44.c  bip44.h  crypto.c  hash.h
src/deriveAddress/: deriveAddress.c  deriveAddress.h
src/deriveNativeScriptHash/: deriveNativeScriptHash.c  deriveNativeScriptHash.h  deriveNativeScriptHash_ui.h
src/getPublicKey/: getPublicKeys.c  getPublicKeys.h  getPublicKeys_ui.c  getPublicKeys_ui.h
src/handlers/: getSerial.c  getSerial.h  getVersion.c  getVersion.h  handlers.c  handlers.h
src/keyDerivation/: keyDerivation.c  keyDerivation.h
src/messageSigning/: messageSigning.c  messageSigning.h
src/nativeScriptHashBuilder/: nativeScriptHashBuilder.c  nativeScriptHashBuilder.h
src/securityPolicy/: securityPolicy.c  securityPolicyType.h
src/signCVote/: signCVote.c  signCVote.h  signCVote_ui.h
src/signMsg/: signMsg.c  signMsg.h  signMsg_ui.h
src/signOpCert/: signOpCert.c  signOpCert.h
src/signTx/: signTx.c  signTx.h  signTxAuxData.h  signTxCVoteRegistration.c  signTxCVoteRegistration.h  signTxMint.c  signTxMint.h  signTxMint_ui.c  signTxMint_ui.h  signTxOutput.c  signTxOutput_ui.c  signTxPoolRegistration.c  signTxPoolRegistration_ui.c  signTxPoolRegistration_ui.h  signTxUtils.c
src/swap/: handle_check_address.c  handle_get_printable_amount.c  handle_sign_transaction.c  handle_sign_transaction.h  io_swap.c  io_swap.h
src/test/: addressUtilsShelley_test.c  bech32_test.c  bip44_test.c  cbor_test.c  crc32_test.c  hexUtils_test.c  keyDerivation_test.c  nativeScriptHashBuilder_test.c  runTests.c  runTests.h  testUtils.h  textUtils_test.c
src/tokens/: tokens.h
src/txHashBuilder/: txHashBuilder.c
src/ui/: menu.h  ui.h  uiHelpers.c  uiHelpers.h  ui_callback.c  ui_callback.h
src/ui/bagl/: uiHelpers_nanos.c  uiHelpers_nanox.c  uiScreens_bagl.c  uiScreens_bagl.h
src/ui/nbgl/: uiScreens_nbgl.c  uiScreens_nbgl.h  ui_menu_nbgl.c  ui_nbgl.c
src/utils/: cbor.c  cbor.h  hexUtils.c  hexUtils.h  ipUtils.c  ipUtils.h  textUtils.c  textUtils.h  utils.h
src/votecastHashBuilder/: votecastHashBuilder.h
tests/: conftest.py  requirements.txt  setup.cfg  test_cvote.py  test_derive_address.py  test_derive_native_script.py  test_pubkey.py  test_signMsg.py  test_signOpCert.py  test_signTx.py  test_version.py  usage.md  utils.py
tests/application_client/: app_def.py  command_builder.py  command_sender.py
tests/input_files/: cvote.py  derive_address.py  derive_native_script.py  pubkey.py  signMsg.py  signOpCert.py  signTx.py
tokenRegistry/: convert.py  tokenList.json  token_data.c  top100JsonList_ep321-337.json
